# janus

./: Cargo.toml  README.md  janus-test.toml  janus.service  janus.toml
src/: config.rs  discord_side.rs  irc_side.rs  list_channels.rs  main.rs  signals.rs  util.rs
src/commands/: list_channels.rs  mod.rs  run.rs
src/config/: mod.rs
src/server/: discord_parser.rs  discord_side.rs  irc_side.rs  mod.rs
