[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "janus"
version = "0.1.0"

[dependencies]
dotenv = "0.13.0"
failure = "0.1.3"
fern = { version = "0.5.6", features = ["syslog-4"] }
futures = "0.1.25"
hostname = "0.1.5"
irc = "0.13.6"
log = "0.4.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serenity = "0.5.10"
structopt = "0.2.13"
syslog = "4.0.1"
toml = "0.4.8"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
