[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "janus"
version = "0.1.0"

[dependencies]
antidote = "1.0"
dotenv = "0.13.0"
failure = "0.1.3"
fern = { version = "0.5.6", features = ["syslog-4"] }
futures = "0.1.25"
hostname = "0.1.5"
irc = "0.13.6"
itertools = "0.8"
lazy_static = "1.2.0"
log = "0.4.6"
nix = { version = "0.11.0", optional = true }
regex = "1.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
serenity = "0.5.10"
structopt = "0.2.13"
syslog = "4.0.1"
toml = "0.4.8"
unicode-segmentation = "1.2.1"

[features]
default = ["signals"]
signals = ["nix"]

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
